--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 <input type="text" class="form-input" placeholder="Email adresse">
             </div>
             <div class="form-input-div">
-                <textarea type="text" class="textarea-input form-input" placeholder="Hva handler det" rows="10"></textarea>
+                <textarea type="text" class="textarea-input form-input" placeholder="Hva handler det om" rows="10"></textarea>
             </div>
             <input type="submit" class="submit-button" value="Send inn skjema" onclick="alertF()">
         </form>
