--- a/index.html
+++ b/index.html
@@ -19,17 +19,12 @@
                         <i class="fa-solid fa-bars nav-menu-button"></i>
                     </li>
                     <li class="nav-list-item flex">
-                        <input type="text" class="nav-search-input" placeholder="Søk her">
-                        <i class="fa-solid fa-search nav-search-icon"></i>
-                    </li>
-                    <li class="nav-list-item flex">
                         <a href="/index.html" class="nav-button">Hjem</a>
+                    <li class="nav-list-item flex">
+                        <a href="./information.html" class="nav-button">Informasjon</a>
                     </li>
                     <li class="nav-list-item flex">
-                        <a href="https://mentalhelse.no/" class="nav-button emergency-text">Få hjelp nå</a>
-                    </li>
-                    <li class="nav-list-item flex">
-                        <a href="./contact.html" class="nav-button">kontakt Skjema</a>
+                        <a href="./contact.html" class="nav-button current-page">kontakt Skjema</a>
                     </li>
                 </ul>
              </nav>
@@ -43,20 +38,20 @@
                 <h1 class="emergency-text">Trenger hjelp nå?</h2>
                 <p>Ring: <span class="emergency-text">116 123</span></p>
                 <p>Ringer fra utlandet?: <span class="emergency-text">+47 911 16 123</span></p>
-                <p>Mentalhelse nettside: <span class="emergency-text">https://mentalhelse.no/</span></p>
+                <a href="https://mentalhelse.no/" class="emergency-link-button">Få hjelp</a>
             </div>
             <ul class="info-links flex column">
                 <li>
-                    <a href="" class="info-link">Selvmordstanker</a>
+                    <a href="./information.html#article-first" class="info-link">Depresjon</a>
                 </li>
                 <li>
-                    <a href="" class="info-link">ADHD</a>
+                    <a href="./information.html#article-second" class="info-link">Selvmordstanker</a>
                 </li>
                 <li>
-                    <a href="" class="info-link">Spiseforstyleser</a>
+                    <a href="./information.html#article-third" class="info-link">ADHD</a>
                 </li>
                 <li>
-                    <a href="" class="info-link">Depresjon</a>
+                    <a href="./information.html#article-fourth" class="info-link">Spiseforstyleser</a>
                 </li>
             </ul>
         </main>
